Closed Bug 48292 Opened 24 years ago Closed 24 years ago

Crashes at [@nsCacheManager::NoteDormant()]

Categories

(Core :: Networking: Cache, defect, P1)

x86
All
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: namachi, Assigned: neeti)

References

Details

(Keywords: crash, topcrash, Whiteboard: [nsbeta3+])

Crash Data

Reported by Talkback System.

Reasons for crash :-
  - File->Exit
  - Closed
  - Closed when Mail open.

Code Around the Crash :-
276                 nsresult
277                 nsCacheManager::NoteDormant(nsCachedNetData* aEntry)
278                 {
279                     nsresult rv;
280                     PRUint32 keyLength;
281                     char* key;
282                     nsCOMPtr<nsINetDataCacheRecord> record;
283                     nsCachedNetData* deletedEntry;
284 hoa.nguyen 1.1  
285 fur        1.4      rv = aEntry->GetRecord(getter_AddRefs(record));
286                     if (NS_FAILED(rv)) return rv;
287                     
288                     rv = record->GetKey(&keyLength, &key);
289                     if (NS_FAILED(rv)) return rv;
290                     
291                     nsStringKey hashTableKey(nsCString(key, keyLength));
292                     deletedEntry = 
(nsCachedNetData*)gCacheManager->mActiveCacheRecords->Remove(&hashTableKey);
293 fur        1.5  //  NS_ASSERTION(deletedEntry == aEntry, "Hash table 
inconsistency");
294 warren     1.14     nsMemory::Free( key );
295 fur        1.4      return NS_OK;
296 hoa.nguyen 1.1  }


Stack Trace: 
nsCacheManager::NoteDormant
[d:\builds\seamonkey\mozilla\netwerk\cache\mgr\nsCacheManager.cpp
nsCachedNetData::Release
[d:\builds\seamonkey\mozilla\netwerk\cache\mgr\nsCachedNetData.cpp
nsCOMPtr_base::~nsCOMPtr_base   
[d:\builds\seamonkey\mozilla\xpcom\base\nsCOMPtr.cpp
nsHTTPChannel::~nsHTTPChannel
[d:\builds\seamonkey\mozilla\netwerk\protocol\http\src\nsHTTPChannel.cpp
nsHTTPChannel::Release
[d:\builds\seamonkey\mozilla\netwerk\protocol\http\src\nsHTTPChannel.cpp
nsXPCWrappedNative::~nsXPCWrappedNative
[d:\builds\seamonkey\mozilla\js\src\xpconnect\src\xpcwrappednative.cpp
nsXPCWrappedNative::Release
[d:\builds\seamonkey\mozilla\js\src\xpconnect\src\xpcwrappednative.cpp
nsXPCWrappedNative::JSObjectFinalized
[d:\builds\seamonkey\mozilla\js\src\xpconnect\src\xpcwrappednative.cpp
WrappedNative_Finalize
[d:\builds\seamonkey\mozilla\js\src\xpconnect\src\xpcwrappednativejsops.cpp
js_FinalizeObject       [d:\builds\seamonkey\mozilla\js\src\jsobj.c
js_GC   [d:\builds\seamonkey\mozilla\js\src\jsgc.c
js_ForceGC      [d:\builds\seamonkey\mozilla\js\src\jsgc.c
js_DestroyContext       [d:\builds\seamonkey\mozilla\js\src\jscntxt.c
JS_DestroyContext       [d:\builds\seamonkey\mozilla\js\src\jsapi.c
mozJSComponentLoader::~mozJSComponentLoader
[d:\builds\seamonkey\mozilla\js\src\xpconnect\loader\mozJSComponentLoader.cpp
mozJSComponentLoader::`scalar deleting destructor'
mozJSComponentLoader::Release
[d:\builds\seamonkey\mozilla\js\src\xpconnect\loader\mozJSComponentLoader.cpp
nsSupportsHashtable::ReleaseElement
[d:\builds\seamonkey\mozilla\xpcom\ds\nsHashtable.cpp
_hashEnumerate  [d:\builds\seamonkey\mozilla\xpcom\ds\nsHashtable.cpp
PL_HashTableEnumerateEntries    [plhash.c
nsHashtable::Enumerate  [d:\builds\seamonkey\mozilla\xpcom\ds\nsHashtable.cpp
nsSupportsHashtable::~nsSupportsHashtable
[d:\builds\seamonkey\mozilla\xpcom\ds\nsHashtable.cpp
nsSupportsHashtable::`vector deleting destructor'
NS_ShutdownXPCOM        [d:\builds\seamonkey\mozilla\xpcom\build\nsXPComInit.cpp
NETSCP6.EXE + 0x123b (0x0040123b)
NETSCP6.EXE + 0x27c7 (0x004027c7)
KERNEL32.DLL + 0x1b6be (0xbff8b6be)
KERNEL32.DLL + 0x1b570 (0xbff8b570)
KERNEL32.DLL + 0x19f33 (0xbff89f33)
nsCacheManager::NoteDormant
[d:\builds\seamonkey\mozilla\netwerk\cache\mgr\nsCacheManager.cpp
nsCachedNetData::Release
[d:\builds\seamonkey\mozilla\netwerk\cache\mgr\nsCachedNetData.cpp
nsCOMPtr_base::~nsCOMPtr_base   
[d:\builds\seamonkey\mozilla\xpcom\base\nsCOMPtr.cpp
nsHTTPChannel::~nsHTTPChannel
[d:\builds\seamonkey\mozilla\netwerk\protocol\http\src\nsHTTPChannel.cpp
nsHTTPChannel::Release
[d:\builds\seamonkey\mozilla\netwerk\protocol\http\src\nsHTTPChannel.cpp
nsXPCWrappedNative::~nsXPCWrappedNative
[d:\builds\seamonkey\mozilla\js\src\xpconnect\src\xpcwrappednative.cpp
nsXPCWrappedNative::Release
[d:\builds\seamonkey\mozilla\js\src\xpconnect\src\xpcwrappednative.cpp
nsXPCWrappedNative::JSObjectFinalized
[d:\builds\seamonkey\mozilla\js\src\xpconnect\src\xpcwrappednative.cpp
WrappedNative_Finalize
[d:\builds\seamonkey\mozilla\js\src\xpconnect\src\xpcwrappednativejsops.cpp
js_FinalizeObject       [d:\builds\seamonkey\mozilla\js\src\jsobj.c
js_GC   [d:\builds\seamonkey\mozilla\js\src\jsgc.c
js_ForceGC      [d:\builds\seamonkey\mozilla\js\src\jsgc.c
js_DestroyContext       [d:\builds\seamonkey\mozilla\js\src\jscntxt.c
JS_DestroyContext       [d:\builds\seamonkey\mozilla\js\src\jsapi.c
mozJSComponentLoader::~mozJSComponentLoader
[d:\builds\seamonkey\mozilla\js\src\xpconnect\loader\mozJSComponentLoader.cpp
mozJSComponentLoader::`scalar deleting destructor'
mozJSComponentLoader::Release
[d:\builds\seamonkey\mozilla\js\src\xpconnect\loader\mozJSComponentLoader.cpp
nsSupportsHashtable::ReleaseElement
[d:\builds\seamonkey\mozilla\xpcom\ds\nsHashtable.cpp
_hashEnumerate  [d:\builds\seamonkey\mozilla\xpcom\ds\nsHashtable.cpp
PL_HashTableEnumerateEntries    [plhash.c
nsHashtable::Enumerate  [d:\builds\seamonkey\mozilla\xpcom\ds\nsHashtable.cpp
nsSupportsHashtable::~nsSupportsHashtable
[d:\builds\seamonkey\mozilla\xpcom\ds\nsHashtable.cpp
nsSupportsHashtable::`vector deleting destructor'
NS_ShutdownXPCOM        [d:\builds\seamonkey\mozilla\xpcom\build\nsXPComInit.cpp
NETSCP6.EXE + 0x123b (0x0040123b)
NETSCP6.EXE + 0x27c7 (0x004027c7)
KERNEL32.DLL + 0x1b6be (0xbff8b6be)
KERNEL32.DLL + 0x1b570 (0xbff8b570)
KERNEL32.DLL + 0x19f33 (0xbff89f33)

http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/netwerk/cache/mgr/nsCacheMan
ager.cpp
line 294

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 4  Total: 4 
        OS: Windows NT  5.0 build 2195
        URL: 
        Comment: closed mozilla M17 using the little x (close button) in the 
upper right corner of main mozilla window

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 24  Total: 24 
        OS: Linux 2.2.14
        URL: 
        Comment: I was just closing mozilla by hitting the "X" the window border

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 3  Total: 3 
        OS: Linux 2.2.14-15mdksmp
        URL: 
        Comment: Trying to import my Netscape bookmarks:

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 17  Total: 17 
        OS: Linux 2.2.14
        URL: 
        Comment: Bookmarks import from Navigator 4.74

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 15  Total: 15 
        OS: Linux 2.4.0-test3
        URL: 
        Comment: Shutting it down.

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 2  Total: 2 
        OS: Linux 2.2.5-15
        URL: 
        Comment: importing bookmarks from .netscape dir.  Went to "file/close" 
on bookmark manager

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 8  Total: 8 
        OS: Windows 98  4.10 build 67766446
        URL: 
        Comment: closing my netscape

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 3  Total: 3 
        OS: Windows NT  4.0 build 1381
        URL: 
        Comment: Changed themes from Modern to Classic and back to Modern and 
then closed the browser

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 5  Total: 5 
        OS: Windows 98  4.10 build 67766446
        URL: www.excite.com
        Comment: M17

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 5  Total: 5 
        OS: Windows NT  5.0 build 2195
        URL: 
        Comment: I was exiting Communicator when it blew up.  I'm running 
Windows 2000

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 45  Total: 45 
        OS: Windows NT  4.0 build 1381
        URL: 
        Comment: At first the instant message window where i was chatting looked
normal

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 24  Total: 24 
        OS: Linux 2.2.15
        URL: www.x96.com
        Comment: I clicked on exit...tried to close both windows I had open

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 13  Total: 13 
        OS: Linux 2.2.14-5.0smp
        URL: I was quitting the application with an active fire transfer
        Comment: 

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 30  Total: 30 
        OS: Linux 2.2.16
        URL: http://www.slashdot.org
        Comment: I went to file->exit. it seemed to exit well

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 52  Total: 52 
        OS: Windows NT  4.0 build 1381
        URL: 
        Comment: Shutting down

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 57  Total: 57 
        OS: Windows NT  4.0 build 1381
        URL: http://slashdot.org
        Comment: Closing Mozilla

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 16  Total: 16 
        OS: Windows NT  5.0 build 2195
        URL: 
        Comment: I closed Netscape!

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 12  Total: 12 
        OS: Linux 2.2.14ext3
        URL: 
        Comment: Basically the only thing that I did was launch mozilla

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 3  Total: 3 
        OS: Linux 2.2.16
        URL: 
        Comment: Netscape brought this box while exiting. I don't know why. Who
cares?
        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 25  Total: 25 
        OS: Linux 2.2.16
        URL: 
        Comment: Quitting

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 11  Total: 11 
        OS: Linux 2.2.16
        URL: 
        Comment: I didn't know it failed

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 1  Total: 1 
        OS: Windows NT  4.0 build 1381
        URL: 
        Comment: Started NS6pr2

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 67  Total: 89 
        OS: Linux 2.2.15-4mdk
        URL: 
        Comment: Exited the browser after a long session.

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 2  Total: 2 
        OS: Windows 98  4.10 build 67766222
        URL: 
        Comment: I went file exit and when netscape closed i got a fatal error 
msg

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 3  Total: 5 
        OS: Windows 98  4.10 build 67766222
        URL: 
        Comment: Crashed again

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 4  Total: 4 
        OS: Windows 98  4.10 build 67766446
        URL: 
        Comment: 

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 5  Total: 5 
        OS: Windows NT  4.0 build 1381
        URL: 
        Comment: Selecting file 

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 40  Total: 40 
        OS: Windows 98  4.10 build 67766446
        URL: 
        Comment: 

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 5  Total: 5 
        OS: Linux 2.2.16-immunix
        URL: 
        Comment: selected "Quit".

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 373  Total: 373 
        OS: Linux 2.2.16-3
        URL: Why is it so slow?
        Comment: Are you intentionally trying to kill this product?   So far

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 59  Total: 59 
        OS: Windows NT  4.0 build 1381
        URL: 
        Comment: i was logging off of netscape

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 74  Total: 74 
        OS: Linux 2.4.0-test5
        URL: 
        Comment: closing mozilla-M17 while working offline


        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 10  Total: 10 
        OS: Linux 2.2.14-5.0
        URL: 
        Comment: Just downloaded some file as a test... Did this concurrently on

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 14  Total: 14 
        OS: Windows NT  5.0 build 2195
        URL: 
        Comment: i tried to close the mail


        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 131  Total: 131 
        OS: Windows 98  4.10 build 67766222
        URL: 
        Comment: I selected 'File' and then 'Exit'.


        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 21  Total: 21 
        OS: Windows 98  4.10 build 67766446
        URL: 
        Comment: Closed the program and it crashed.  Had just finished doing 
minimal web browsing.  

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 2  Total: 13 
        OS: Windows 98  4.10 build 67766446
        URL: 
        Comment: Clearing the history.

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 24  Total: 24 
        OS: Windows NT  4.0 build 1381
        URL: 
        Comment: Closing Netscape

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 191  Total: 191 
        OS: Linux 2.2.12-20
        URL: 
        Comment: Quit application

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 3  Total: 3 
        OS: Windows 98  4.10 build 67766446
        URL: 
        Comment: File; Exit Browser

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 156  Total: 231 
        OS: Linux 2.4.0-test5
        URL: 
        Comment: exiting

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 2  Total: 2 
        OS: Windows 98  4.10 build 67766222
        URL: Bookmarks
        Comment: I was in the Manage Bookmarks

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 25  Total: 25 
        OS: Windows 98  4.10 build 67766222
        URL: 
        Comment: closed netscape while mail was still up

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 185  Total: 185 
        OS: Windows 98  4.10 build 67766446
        URL: www.ask.com
        Comment: managing bookmarks
        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 83  Total: 83 
        OS: Linux 2.2.16
        URL: 
        Comment: I had viewed www.w3.org previously

        Build: 2000080712 CrashDate: 2000-08-08 UptimeMinutes: 9  Total: 9 
        OS: Linux 2.2.14-15mdk
        URL: exiting normally ...
        Comment: hadnt deleted the nightly build ../home/.m
Adding keywords crash, topcrash and nsbeta3 .
Keywords: crash, nsbeta3, topcrash
Neeti: this seems bad. Is this the same as the RetrieveInfo? Or more generally
the cache corruption? We hope to be able to wrap all cache corruption bugs in
general. plus. 
Whiteboard: [nsbeta3+]
*** Bug 50752 has been marked as a duplicate of this bug. ***
Tranferring P1 (PDT approves) from bug 50752
Status: NEW → ASSIGNED
Priority: P3 → P1
*** Bug 50551 has been marked as a duplicate of this bug. ***
*** Bug 50551 has been marked as a duplicate of this bug. ***
Checked in fix to release cache entry as soon as we are done with it.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
*** Bug 51797 has been marked as a duplicate of this bug. ***
verified:
WinNT 2000090808
Status: RESOLVED → VERIFIED
Talkback data still show crashes on nsCachedNetData::Release in 09-08-08
builds.  Should we reopen?
David,
The talkback data reflects crashes that have taken place over 4 or 10 days 
(shiva, what do we have it set to right now?)...so sometimes if a bug is fixed, 
the crash data will still show up for a few days after the checkin.  I usually 
wait about a week before I reopen a bug like this...unless I can reproduce it 
myself with the latest build.
Yes, but the build ID is listed, and I looked at it.
Does this crash have the same stack trace as before?

Neeti
Actually, it doesn't.  I'll file a new bug.
Summary: Crashes at nsCacheManager::NoteDormant() → Crashes at [@nsCacheManager::NoteDormant()]
Crash Signature: [@nsCacheManager::NoteDormant()]
You need to log in before you can comment on or make changes to this bug.