bug 48292 Releasing cache entry as soon as we are done rather than waiting until nsHTTPChannel gets deleted, which apparently happens after the next page finishes loading giving rise to all kinds of interesting conditions if the current and next page are same. r=neeti